[package]
name = "qr"
version = "0.1.0"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = { path = "components/qrcode" }

[dev-dependencies]
actix-rt = "1"
