[package]
name = "qr"
version = "0.1.0"
authors = ["Matthew Blode <m@blode.co>"]
edition = "2018"
description = "QR code generator via an API"
documentation = "https://docs.rs/qr"
readme = "README.md"
repository = "https://github.com/mblode/qr/"
license = "MIT"
keywords = ["actix", "api", "qr", "qr-code"]
categories = ["api"]

[dependencies]
actix-web = "3"
env_logger = "0.8"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = { path = "components/qrcode" }

[dev-dependencies]
actix-rt = "1"
